k8s/gitea-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitea
spec:
  type: NodePort
  selector:
    app: gitea
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30002
    - name: ssh
      port: 22
      targetPort: 22
      nodePort: 32222
