k8s/telemetry-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: telemetry-app
spec:
  selector:
    app: telemetry-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
